<?xml version="1.0"?>
<package format="2">
  <name>mv_emulator</name>
  <version>0.0.0</version>
  <description>The mv_emulator package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
