<?xml version="1.0"?>
<package format="2">
  <name>rebroadcaster_msgs</name>
  <version>0.0.0</version>
  <description>Provides service definitions for rebroadcaster nodes</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
